fix lightbox input text being cut off in firefox

--- a/app/assets/stylesheets/lightboxes.css.sass
+++ b/app/assets/stylesheets/lightboxes.css.sass
@@ -44,11 +44,13 @@
     height: $s1 * 2
     line-height: $s1
     font-size: $s1
-    padding: $s1 / 2 - 2
+    padding: ($s1 / 2 - 2)
     display: block
     width: 100%
     margin: 0
     margin-bottom: $s1
+  input
+    padding: 0 inherit
 
   .button
     float: right
